General | Improved notifications for when DietPi is installing system with automated flags.
General | DietPi RPi Kernel: Updated to 4.9.52
General | RPi Stretch: Updated, matching official release of 2017-09-07-raspbian-stretch-lite
DietPi-Software | Allo Web Interface: Added for testing purposes only. We will provide release images for Sparky and RPi pre-installed at a later date.
DietPi-Software | Roon Bridge: Now available for x86_64 systems.
DietPi-Software | Stretch: TightVNC now disabled as replaced by TigerVNC/VNC4.
DietPi-Software | Minio: Now available for installation. Object storage server with Amazon S3 compatible API. Many thanks to @techdabbler for contributing this addition! https://github.com/Fourdee/DietPi/pull/1152
DietPi-Software | Sabnzbd: Updated to 2.3.0 for new installations only. Thanks @hydrouk
DietPi-Software | Shairport-sync: Updated to 3.1.2.
DietPi-Software | FuguHub: Now available for install. Many thanks to @techdabbler for contributing this: https://github.com/Fourdee/DietPi/pull/1168
DietPi-Software | Docker: Now available for install. Many thanks to @techdabbler for contributing this: https://github.com/Fourdee/DietPi/pull/1169

Bug fixes:
DietPi-Config | Resolved syntax issues with wifi_disable_powersave.service
DietPi-Drive_Manager | Resolved an issue where "Read Only" drives would incorrectly be displayed as "Disabled".
DietPi-Services | PHP7-FPM service now correctly controlled.
DietPi-Software | Stretch: VNC4Server, resolved various issues with tigervnc that prevented successful installation and operation. Disabled "localhost" only by default. TigerVNC packages now removed correctly during uninstall.
DietPi-Software | Shairport-sync (Stretch): Resolved an issue where dep libssl1.0.0 is no longer available from Debian Stretch repo. Causing the process to fail.

Allo Web Interface Changes:
GENERAL: Auto swapfile size generation on first boot.