@@ -1,0 +1,19 @@
+#Internal Drives---------------------------------------------------
+proc            /proc           proc    defaults																0 0
+UUID=CA7A-8CED  /boot/efi           auto    defaults,noatime,discard											0 2
+UUID=e1efd31c-5b47-4db1-b600-7954f833f9f5 /               auto    defaults,noatime,discard 						0 1
+tmpfs                   /tmp                    tmpfs   defaults,noatime,nodev,nosuid,mode=1777					0 0
+tmpfs                   /var/log                tmpfs   defaults,size=20m,noatime,nodev,nosuid,mode=1777        0 0
+tmpfs                   /DietPi                 tmpfs   defaults,size=10m,noatime,nodev,nosuid,mode=1777        0 0
+
+#Samba Client------------------------------------------------------
+#/mnt/samba . Please use dietpi-config and the Networking Options: NAS menu to setup this mount
+
+#FTP Client Mount--------------------------------------------------
+#/mnt/ftp_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount
+
+#NFS Client Mount--------------------------------------------------
+#/mnt/nfs_client . Please use dietpi-config and the Networking Options: NAS menu to setup this mount
+
+#External Drives---------------------------------------------------
+#NB: Please use dietpi-drive_manager to setup and control your external drives.
