@@ -123,7 +123,15 @@
 	#	X86_64 native
 	if (( $HW_MODEL == 21 )); then
 
-		cp /DietPi/dietpi/conf/fstab_x86_64-native /etc/fstab
+		if [ -d /boot/efi ]; then
+
+			cp /DietPi/dietpi/conf/fstab_x86_64-native_EFI /etc/fstab
+
+		else
+
+			cp /DietPi/dietpi/conf/fstab_x86_64-native /etc/fstab
+
+		fi
 
 	#	VM
 	elif (( $HW_MODEL == 20 )); then
