@@ -6,6 +6,7 @@ General | Ondemand is now the default CPU governor for all devices. Previously I
 General | Improved notifications for when DietPi is installing system with automated flags.
 General | DietPi RPi Kernel: Updated to 4.9.52
 General | RPi Stretch: Updated, matching official release of 2017-09-07-raspbian-stretch-lite
+DietPi-LetsEncrypt | Added support for Nginx on Stretch. Many thanks to @Bridouz for contributing this: https://github.com/Fourdee/DietPi/pull/1166
 DietPi-Software | Allo Web Interface: Added for testing purposes only. We will provide release images for Sparky and RPi pre-installed at a later date.
 DietPi-Software | Roon Bridge: Now available for x86_64 systems.
 DietPi-Software | Stretch: TightVNC now disabled as replaced by TigerVNC/VNC4.
